src/tests/snapshots/tera__tests__lexer__lexer_errors@invalid_string.txt.snap
---
source: src/tests/lexer.rs
expression: res.unwrap_err()
input_file: src/tests/lexer_inputs/errors/invalid_string.txt
---
Error {
    kind: SyntaxError(
        SyntaxError {
            message: "String opened with `\"` is missing its closing `\"`",
            span:  @ 1:3-1:3 (3..3),
            report: "",
        },
    ),
    source: None,
}
