src/tests/snapshots/tera__tests__lexer__lexer_ok@empty_comment.txt.snap
---
source: src/tests/lexer.rs
expression: "&tokens"
input_file: src/tests/lexer_inputs/success/empty_comment.txt
---
[
    CONTENT(""),
]
