src/tests/snapshots/tera__tests__lexer__lexer_ok@tags.txt.snap
---
source: src/tests/lexer.rs
expression: "&tokens"
input_file: src/tests/lexer_inputs/success/tags.txt
---
[
    TAG_START(false),
    IDENT(for),
    IDENT(i),
    IDENT(in),
    IDENT(range),
    LEFT_PAREN,
    IDENT(end),
    ASSIGN,
    INTEGER(10),
    RIGHT_PAREN,
    TAG_END(false),
    VARIABLE_START(false),
    IDENT(i),
    VARIABLE_END(false),
    TAG_START(false),
    IDENT(endfor),
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(filter),
    IDENT(upper),
    TAG_END(false),
    CONTENT("hello"),
    TAG_START(false),
    IDENT(endfilter),
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(set),
    IDENT(txt),
    ASSIGN,
    IDENT(macro),
    COLON,
    COLON,
    IDENT(call),
    LEFT_PAREN,
    IDENT(arg),
    ASSIGN,
    STRING("ho"),
    RIGHT_PAREN,
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(set),
    IDENT(txt),
    PIPE,
    IDENT(upper),
    TAG_END(false),
    CONTENT("Hello"),
    TAG_START(false),
    IDENT(endset),
    TAG_END(false),
    CONTENT("\n"),
    TAG_START(false),
    IDENT(set),
    IDENT(txt),
    ASSIGN,
    NULL,
    TAG_END(false),
    CONTENT("q"),
]
